# simple-rest-client

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  data_layer.rs  data_types.rs  main.rs  ui.rs
src/communication_layer/: mod.rs
src/config/: mod.rs
src/data_types/: mod.rs
src/ui/: alert.rs  create_movie.rs  delegate.rs  dialog.rs  login.rs  mod.rs  register.rs
