[package]
name = "simple-rest-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
crossterm = "0.29.0"
ratatui = "0.29.0"
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tui-input = "0.12.1"
