[package]
name = "simple-rest-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
eframe = "0.31.1"
egui = "0.31.1"
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
num-traits = { version = "0.2", default-feature = false }
